tests/baselines/reference/Protected2.errors.txt
tests/cases/conformance/parser/ecmascript5/Protected/Protected2.ts(1,11): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/Protected/Protected2.ts(1,1): error TS2304: Cannot find name 'protected'.


==== tests/cases/conformance/parser/ecmascript5/Protected/Protected2.ts (2 errors) ====
    protected module M {
              ~~~~~~
!!! error TS1005: ';' expected.
    ~~~~~~~~~
!!! error TS2304: Cannot find name 'protected'.
    }